update plugin to use later firebase

--- a/plugin.xml
+++ b/plugin.xml
@@ -82,7 +82,7 @@
     <source-file src="src/ios/PushPlugin.m"/>
     <header-file src="src/ios/AppDelegate+notification.h"/>
     <header-file src="src/ios/PushPlugin.h"/>
-    <framework src="FirebaseMessaging" type="podspec" spec="~> 2.0.0"/>
+    <framework src="Firebase/Messaging" type="podspec" spec="~> 5.0"/>
     <framework src="PushKit.framework"/>
   </platform>
   <platform name="windows">
